--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-T56DQTTH');</script>
 <!-- End Google Tag Manager -->
     <meta name="naver-site-verification" content="095bfb42fee9a53839e8833a81acd6342ddf7b3d" />
+    <meta name="naver-site-verification" content="d5cdeaf52eccf857f5cb7d8fe7d8a41c5f31b6d3" />
     <link rel="icon" type="image/png" href="https://forfafa.github.io/main/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
