--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-T56DQTTH');</script>
 <!-- End Google Tag Manager -->
-    <meta name="naver-site-verification" content="d5cdeaf52eccf857f5cb7d8fe7d8a41c5f31b6d3" />
+
     <link rel="icon" type="image/png" href="https://forfafa.github.io/main/favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,8 +25,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="description" content="아빠 친구 찾기, 부자 스포츠 모임, 육아 정보, 키즈 시설 정보까지 한번에!">
     <meta name="keywords" content="아빠육아, 육아파트너, 아빠친구, 부자스포츠, 육아정보, 키즈시설, 육아커뮤니티, 아빠모임, 육아고민, 아빠육아휴직, 아빠커뮤니티, 육아대디">
     <meta name="author" content="포파파">
+    <!-- robots.txt 및 검색엔진 크롤러 허용 -->
     <meta name="robots" content="index, follow">
-    
+    <meta name="naver-site-verification" content="d5cdeaf52eccf857f5cb7d8fe7d8a41c5f31b6d3" />
     <!-- 모든 주요 검색엔진 로봇 허용 -->
     <meta name="googlebot" content="index, follow">
     <meta name="bingbot" content="index, follow">
