--- a/index.html
+++ b/index.html
@@ -1138,16 +1138,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     
                     <div class="hero-stats">
                         <div class="stat">
-                            <span class="stat-number">24.5%</span>
-                            <span class="stat-label">아빠 육아휴직 비율</span>
+                            <span class="stat-number">41,829명</span>
+                            <span class="stat-label">아빠 육아휴직자</span>
                         </div>
                         <div class="stat">
-                            <span class="stat-number">52%</span>
-                            <span class="stat-label">놀이법 고민하는 아빠</span>
+                            <span class="stat-number">36%</span>
+                            <span class="stat-label">아빠 육아정보 부족 경험</span>
                         </div>
                         <div class="stat">
-                            <span class="stat-number">2,500+</span>
-                            <span class="stat-label">대기 중인 아빠들</span>
+                            <span class="stat-number">78%</span>
+                            <span class="stat-label">아빠육아, 배우자 만족도</span>
                         </div>
                     </div>
                     
