--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-T56DQTTH');</script>
 <!-- End Google Tag Manager -->
 
-    <link rel="icon" type="image/png" href="https://forfafa.github.io/main/favicon.png">
+    <link rel="shortcut icon" href="https://forfafa.github.io/main/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>포파파 - 아빠를 위한 쉬운 육아 파트너</title>
