--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="shortcut icon" href="https://forfafa.github.io/main/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>포파파 - 아빠를 위한 쉬운 육아 파트너</title>
+    <title>포파파 - 육아대디를 위한 쉬운 아빠 육아 커뮤니티</title>
     <meta name="description" content="아빠 친구 찾기, 부자 스포츠 모임, 육아 정보, 키즈 시설 정보까지 한번에!">
     <meta name="keywords" content="아빠육아, 육아파트너, 아빠친구, 부자스포츠, 육아정보, 키즈시설, 육아커뮤니티, 아빠모임, 육아고민, 아빠육아휴직, 아빠커뮤니티, 육아대디">
     <meta name="author" content="포파파">
