--- a/index.html
+++ b/index.html
@@ -1626,13 +1626,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <p>아빠를 위한 육아 파트너<br>
                     함께 키우는 아이들, 함께 자라는 아빠들</p>
                     <p style="margin-top: 1rem;">
-                        <strong>Contact:</strong> forfafa.official@gmail.com<br>
+                        <strong>Contact:</strong> hello@forfafa.com<br>
                         <strong>출시 예정:</strong> 2025년 10월
                     </p>
                     <div style="margin-top: 1rem; display: flex; gap: 1rem;">
                         <a href="mailto:forfafa.official@gmail.com" style="color: #FF6B00; text-decoration: none;">이메일</a>
                         <a href="https://blog.naver.com/forfafa" style="color: #FF6B00; text-decoration: none;">블로그</a>
                         <a href="https://instagram.com/forfafa.official" style="color: #FF6B00; text-decoration: none;">인스타그램</a>
+                        <a href="http://pf.kakao.com/_iRxmFn" target="_blank" style="color: #FF6B00; text-decoration: none;">카카오톡채널</a>
                     </div>
                 </div>
                 
