--- a/index.html
+++ b/index.html
@@ -1633,7 +1633,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="mailto:forfafa.official@gmail.com" style="color: #FF6B00; text-decoration: none;">이메일</a>
                         <a href="https://blog.naver.com/forfafa" style="color: #FF6B00; text-decoration: none;">블로그</a>
                         <a href="https://instagram.com/forfafa.official" style="color: #FF6B00; text-decoration: none;">인스타그램</a>
-                        <a href="http://pf.kakao.com/_iRxmFn" target="_blank" style="color: #FF6B00; text-decoration: none;">카카오톡채널</a>
+                        <a href="http://pf.kakao.com/_iRxmFn" target="_blank" style="color: #FF6B00; text-decoration: none;">카카오톡</a>
                     </div>
                 </div>
                 
